# grox_music_player

./: CMakeLists.txt  GUI.cpp  GUI.h  README.md  main.cpp  mpd.conf  music_player.cpp  musicplayer.cpp  musicplayer.h  playmusiccode.cpp  setup.sh
